apps/cyberchef/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyberchef
  labels:
    app.kubernetes.io/name: cyberchef
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cyberchef
  template:
    metadata:
      labels:
        app: cyberchef
        app.kubernetes.io/name: cyberchef
        app.kubernetes.io/instance: cyberchef-prod
        app.kubernetes.io/component: cyberchef
    spec:
      securityContext:
        runAsUser: 27634
        runAsGroup: 27634
        fsGroup: 27634
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: "cyberchef"
          image: "ghcr.io/soerenschneider/cyberchef:11.5.0"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
              name: "cyberchef"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 27634
            runAsGroup: 27634
            capabilities:
              drop:
                - "ALL"
            seccompProfile:
              type: "RuntimeDefault"
          livenessProbe:
            httpGet:
              path: "/_health"
              port: "cyberchef"
            initialDelaySeconds: 15
          readinessProbe:
            httpGet:
              path: "/_health"
              port: "cyberchef"
            initialDelaySeconds: 5
          startupProbe:
            httpGet:
              path: "/_health"
              port: "cyberchef"
            failureThreshold: 60
            periodSeconds: 10
          resources:
            limits:
              memory: "256Mi"
            requests:
              cpu: "5m"
              memory: "32Mi"
