apps/cyberchef/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
spec:
  ports:
    - port: 80
      targetPort: cyberchef
  selector:
    app.kubernetes.io/name: cyberchef
