apps/cyberchef/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "cyberchef"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "cyberchef"
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: "cyberchef"
      from: []
  egress: []
